@@ -11,6 +11,13 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-16:
+- previous fix for mult servers slowed things down, server reads were not running in parrallel
+- fixed this, see comments in JIRA PSAS-161 - servers now read next array after reporting ready,
+  assumption is master will probably pick a different server to scatter
+- added print of EventData, added class ScatterDataQueue
+  
+	
 Tag: V00-00-15:
 - fix issues with multiple servers: JIRA PSAS-161
   wait for all servers to by ready
